--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -12,13 +12,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  highlight_text: ^0.7.2
+  avatar_glow: ^1.2.0
+  
 
 dev_dependencies:
+  http: ^0.12.2
+  intl: ^0.17.0
   flutter_test:
     sdk: flutter
-
+    
   azure_speech_recognition:
     path: ../
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
